--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" href="/img/favicon.ico">
 
   <!-- Google Web Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baltimore&display=swap">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">  
