added a logo to the browser title and the website title

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
   <meta name="description" content="A comprehensive guide to gardening in the Dallas-Fort Worth area, covering plants, flowers, and landscaping tips.">
 
   <!-- Favicon -->
-  <link rel="icon" href="/img/favicon.ico">
+  <!-- Use .ico file if available, or .png as a fallback -->
+  <link rel="icon" href="/src/assets/img/icon/icon-10.png" type="image/png">
 
   <!-- Google Web Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baltimore&display=swap">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">  
-
-  <!-- Tailwind CSS (included in your Vue project via PostCSS) -->
-  <!-- No need to link Tailwind here since it's part of your build process -->
 
   <!-- Font Awesome (If you still need icons) -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
